--- a/hizmetlerimiz.html
+++ b/hizmetlerimiz.html
@@ -40,31 +40,18 @@
             <div class="social-media order-lg-last">
               <p class="mb-0 d-flex">
                 <a
-                  href="#"
+                  href="https://www.facebook.com/prosemfizyocenter"
                   class="d-flex align-items-center justify-content-center"
                   ><span class="fa fa-facebook"
                     ><i class="sr-only">Facebook</i></span
                   ></a
                 >
+
                 <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  ><span class="fa fa-twitter"
-                    ><i class="sr-only">Twitter</i></span
-                  ></a
-                >
-                <a
-                  href="#"
+                  href="https://www.instagram.com/prosem.fizyo.center/"
                   class="d-flex align-items-center justify-content-center"
                   ><span class="fa fa-instagram"
                     ><i class="sr-only">Instagram</i></span
-                  ></a
-                >
-                <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  ><span class="fa fa-dribbble"
-                    ><i class="sr-only">Dribbble</i></span
                   ></a
                 >
               </p>
