footer added with map

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-5">
-            <h2 class="heading-section">Prosem Fizyo Center</h2>
+            <img src="images/prosem.png" alt="" />
           </div>
         </div>
       </div>
@@ -96,6 +96,32 @@
         <!-- END nav -->
       </div>
     </section>
+
+    <!--footer-->
+    <section class="container3">
+      <footer id="footer">
+        <div class="contact-info">
+          <h3>Bize Ulaşın</h3>
+          <p>Email: your@email.com</p>
+          <p>Phone: +123 456 7890</p>
+        </div>
+        <div id="map"></div>
+      </footer>
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12177.24299637226!2d28.9463499!3d40.2688468!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ca3fe82722cc3b%3A0x882848d6a84e4929!2sPROS.E.M%20Fizyo%20Center!5e0!3m2!1str!2str!4v1710169194656!5m2!1str!2str"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+
+    <!--end footer-->
+    <script src="script.js"></script>
 
     <script src="js/main.js"></script>
   </body>
