--- a/index.html
+++ b/index.html
@@ -73,21 +73,25 @@
                   <a href="index.html" class="nav-link">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
-                  <a href="hakkımızda.html" class="nav-link">Hakkımızda</a>
+                  <a href="/html/hakkımızda.html" class="nav-link"
+                    >Hakkımızda</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a href="hizmetlerimiz.html" class="nav-link"
+                  <a href="/html/hizmetlerimiz.html" class="nav-link"
                     >Hizmetlerimiz</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="sakatlıklar.html" class="nav-link">Sakatlıklar</a>
+                  <a href="/html/sakatlıklar.html" class="nav-link"
+                    >Sakatlıklar</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a href="blog.html" class="nav-link">Blog</a>
+                  <a href="/html/blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a href="iletişim.html" class="nav-link">İletişim</a>
+                  <a href="/html/iletişim.html" class="nav-link">İletişim</a>
                 </li>
               </ul>
             </div>
@@ -96,7 +100,21 @@
         <!-- END nav -->
       </div>
     </section>
-
+    <!--ana sayfa-->
+    <div class="content-container">
+      <h1>Hoşgeldiniz</h1>
+      <p>
+        Sizi kliniğimize doktorunuz sevk etmiş olabilir veya daha önce bizimle
+        tedavi görmüş arkadaşlarınızın, yakınlarınızın önerileriyle ProS.E.M’e
+        başvurmuş olabilirsiniz. Sağlıklı yaşamınıza en kısa sürede yeniden
+        kavuşmanız için buradayız. Hastalarla ve hekimlerle olan mükemmel
+        ilişkimiz, multidisipliner yaklaşımımız, hastalarımızın sağlıklarını,
+        işlevlerini yeniden kazanmalarını sağlayacak deneyimli
+        fizyoterapistlerle bir araya getirdiğimiz iyileştirici atmosferin doğal
+        sonucunu ProS.E.M’de yaşayacaksınız.
+      </p>
+    </div>
+    <!--end ana sayfa-->
     <!--footer-->
     <section class="container3">
       <footer id="footer">
