--- a/html/hakkımızda.html
+++ b/html/hakkımızda.html
@@ -19,14 +19,15 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-5">
-            <img src="images/prosem.png" alt="" />
+            <img src="../images/prosem.png" alt="" />
+            <img src="" alt="" />
           </div>
         </div>
       </div>
@@ -36,7 +37,7 @@
           id="ftco-navbar"
         >
           <div class="container">
-            <a class="navbar-brand" href="index.html">Prosem</a>
+            <a class="navbar-brand" href="../index.html">Prosem</a>
             <div class="social-media order-lg-last">
               <p class="mb-0 d-flex">
                 <a
@@ -70,7 +71,7 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
               <ul class="navbar-nav ml-auto mr-md-3">
                 <li class="nav-item active">
-                  <a href="index.html" class="nav-link">Ana Sayfa</a>
+                  <a href="../index.html" class="nav-link">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
                   <a href="hakkımızda.html" class="nav-link">Hakkımızda</a>
