--- a/html/blog.html
+++ b/html/blog.html
@@ -97,6 +97,90 @@
         <!-- END nav -->
       </div>
     </section>
+
+    <section class="title container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Blog Layout</h1>
+          <div class="seperator"></div>
+          <p>Blocks with hover effects</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Start Blog Layout -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 item">
+          <div class="item-in">
+            <h4>Some Kind of Title</h4>
+            <div class="seperator"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+              expedita eveniet consectetur, voluptates voluptatum, sit excepturi
+              earum. Veniam eius amet, accusantium, deserunt officia, quos qui
+              debitis laboriosam velit quis autem!
+            </p>
+            <a href="#"
+              >Read More
+              <i class="fa fa-long-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 item">
+          <div class="item-in">
+            <h4>Some Kind of Title</h4>
+            <div class="seperator"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+              expedita eveniet consectetur, voluptates voluptatum, sit excepturi
+              earum. Veniam eius amet, accusantium, deserunt officia, quos qui
+              debitis laboriosam velit quis autem!
+            </p>
+            <a href="#"
+              >Read More
+              <i class="fa fa-long-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6 item">
+          <div class="item-in">
+            <h4>Some Kind of Title</h4>
+            <div class="seperator"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+              expedita eveniet consectetur, voluptates voluptatum, sit excepturi
+              earum. Veniam eius amet, accusantium, deserunt officia, quos qui
+              debitis laboriosam velit quis autem!
+            </p>
+            <a href="#"
+              >Read More
+              <i class="fa fa-long-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 item">
+          <div class="item-in">
+            <h4>Some Kind of Title</h4>
+            <div class="seperator"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+              expedita eveniet consectetur, voluptates voluptatum, sit excepturi
+              earum. Veniam eius amet, accusantium, deserunt officia, quos qui
+              debitis laboriosam velit quis autem!
+            </p>
+            <a href="#"
+              >Read More
+              <i class="fa fa-long-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--footer-->
     <section class="container3">
       <footer id="footer">
